# python-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup
.github/workflows/: lint.yml  test.yml
script/: lint  setup
tests/: test_dummy.py
