[tool.poetry]
name = "PROJECT_NAME"
version = "0.1.0"
description = "DESCRIPTION"
authors = ["NAME<EMAIL>"]
readme = "README.md"
packages = [{include = "PROJECT_NAME"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
